# NoSQL_MongoDB_RabbitMQ

./: README.md
NoSQL_MongoDB_RabbitMQ/: pyproject.toml
NoSQL_MongoDB_RabbitMQ/nosql_mongodb_rabbitmq/: main.py
NoSQL_MongoDB_RabbitMQ/nosql_mongodb_rabbitmq/db/: config.ini  db_connect.py  models.py  seeds.py
NoSQL_MongoDB_RabbitMQ/nosql_mongodb_rabbitmq/rabbitmq/: consumer_email.py  consumer_sms.py  producer.py
NoSQL_MongoDB_RabbitMQ/nosql_mongodb_rabbitmq/rabbitmq/db/: fill_db.py  models.py
