[tool.poetry]
name = "nosql-mongodb-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Vlad <vladyslav.pasko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv", "tls"], version = "^4.6.2"}
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
